k8s/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website
spec:
  selector:
    matchLabels:
      app: website
      role: frontend
  replicas: 1
  template:
    metadata:
      name: website
      labels:
        app: website
        role: frontend
        env: develop
    spec:
      containers:
      - name: website
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 80
        ports:
        - name: website
          containerPort: 80
