k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: website
    role: frontend
